# rust-react-template

./: README.md
backend/: .env.template  Cargo.toml  README.md  devops.md
backend/src/: lib.rs  main.rs
backend/src/ai_modules/: indiefuture_module_schema.json  mod.rs  sales_order_module_schema.json  system_command_module.rs
backend/src/controllers/: chat_controller.rs  command_controller.rs  mod.rs  oauth_controller.rs  web_controller.rs
backend/src/db/postgres/: mod.rs
backend/src/db/postgres/domains/: bytes32.rs  eth_address.rs  uint256.rs
backend/src/db/postgres/migrations/: 0011_create_bytes32_domain.down.sql  0011_create_bytes32_domain.up.sql  0012_create_uint256_domain.down.sql  0012_create_uint256_domain.up.sql  0013_create_eth_address_domain.down.sql  0013_create_eth_address_domain.up.sql  0100_create_users.up.sql  0118_create_oauth_requests.down.sql  0118_create_oauth_requests.up.sql  0121_user_auth_tokens.down.sql  0121_user_auth_tokens.up.sql
backend/src/db/postgres/models/: access_tokens_model.rs  events_model.rs  invoices_model.rs  mod.rs  oauth_authorization_codes_model.rs  oauth_requests_model.rs  user_auth_tokens_model.rs  users_model.rs
backend/src/db/postgres/scripts/: migrate.rs  rollback_full.rs
backend/src/scripts/: google_oauth_get_code.rs  google_oauth_get_token.rs  indiefuture_oauth_get_code.rs  sales_order_entry.rs  shopify_oauth_get_code.rs  shopify_oauth_get_data.rs  shopify_oauth_get_token.rs  twitter_oauth_get_code.rs  twitter_oauth_get_token.rs  twitter_send_tweet.rs
backend/src/types/: alphanumeric.rs  chronodatetime.rs  complex_text.rs  filehashname.rs  mod.rs  openai_completion.rs  uploaded_file.rs
backend/src/types/indiefuture/: products.rs
backend/src/util/: auth_scopes.rs  backend_server_error.rs  mod.rs  oauth.rs  openai.rs  rand.rs
frontend/: index.html  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/base-components/: index.js
frontend/src/config/: contracts-config.json  dashboard-config.js  docs-config.js  frontend-config.js  provider-config.json  routes.json  server-config.json
frontend/src/interfaces/: types.d.ts
frontend/src/layouts/: Context.jsx  Dashboard.jsx  Main.jsx
frontend/src/lib/: app-helper.ts  file-helper.ts  invoice-lib.ts  product-lib.ts  project-lib.ts
frontend/src/router/: index.jsx
frontend/src/stores/: chat-store-mobx.js  (+6 more)
services/: .env.template  .gitignore  Cargo.toml  README.md
services/src/: main.rs  service_task.rs
services/src/db/postgres/: mod.rs
services/src/db/postgres/domains/: bytes32.rs  eth_address.rs  mod.rs  uint256.rs
services/src/db/postgres/models/: completion_output_model.rs  delivery_method_model.rs  mod.rs  plan_model.rs  scheduled_task_model.rs  user_auth_tokens_model.rs  user_model.rs
services/src/db/postgres/scripts/: migrate.rs  rollback_full.rs
services/src/tasks/: deliver_completion_outputs_task.rs  execute_scheduled_prompt_task.rs  mod.rs
services/src/types/: chronodatetime.rs  mod.rs  openai_completion.rs
(+101 files in other folders)
