[package]
name = "indiefuture-services"
version = "0.1.0"
edition = "2021"
default-run = "services"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 
[dependencies]
async-trait = "0.1.74"
dotenv = "0.15.0"
ethers = "2.0.10"
reqwest = "0.11.22"
 

tokio-postgres-migration = "0.1.0"
tokio-postgres = { version = "0.7.8" ,  features=["with-chrono-0_4"] } 
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
env_logger = "0.10.0"
log = "0.4.18"

degen-sql = "0.1.0"
inquire = "0.6.2"
chrono = { version = "0.4.31", features = ["serde"] }
cron = "0.5"
hex = "0.4.3"
bytes = "1.5.0"
ethabi = "18.0.0"
oauth2 = "4.4.2"
oauth2-twitter = "0.2.0"
 

 

[[bin]]
name = "services"
path = "src/main.rs"

# cargo run --bin migrate
[[bin]]
name = "migrate"
path = "src/db/postgres/scripts/migrate.rs"

[[bin]]
name = "rollback_full"
path = "src/db/postgres/scripts/rollback_full.rs"

